# jot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  UPDATES.md
src/: app.rs  args.rs  cli.rs  config.rs  dir.rs  enums.rs  error.rs  fs.rs  helpers.rs  main.rs  note.rs  output.rs  traits.rs  types.rs  utils.rs  vault.rs
src/output/: error.rs  message.rs  mod.rs
src/state/: args.rs  config.rs  data.rs  mod.rs  vault.rs
src/state/vaults/: current.rs  data.rs  mod.rs  vault.rs
src/states/: args.rs  config.rs  mod.rs  vault.rs
